# urc-200

./: .dockerignore  .gitignore  CHECKLIST.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
crates/latency-spike/: Cargo.toml
crates/latency-spike/src/: main.rs
crates/radio-probe/: Cargo.toml
crates/radio-probe/src/: main.rs
crates/radio-sdr/src/: lib.rs
crates/urc200-proto/: Cargo.toml
crates/urc200-proto/src/: command.rs  freq.rs  inquiry.rs  lib.rs  response.rs
crates/urc200-serial/: Cargo.toml
crates/urc200-serial/src/: error.rs  lib.rs  mock.rs  poller.rs  radio.rs  serial.rs  transport.rs
crates/urc200-serial/tests/: loopback.rs
crates/urc200-server/: Cargo.toml
crates/urc200-server/src/: audio.rs  channels.rs  commands.rs  control_ws.rs  db.rs  dsp.rs  main.rs  ptt.rs  scan.rs
crates/urc200-server/static/: index.html
docs/: stories.md
