[package]
name = "urc200-serial"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "time", "io-util", "macros"] }
tokio-serial = "5.4"
tracing = "0.1"
urc200-proto = { path = "../urc200-proto" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "io-util", "macros", "rt-multi-thread", "test-util"] }
