[package]
name = "urc200-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "urc200-server"
path = "src/main.rs"

[dependencies]
alsa = "0.9"
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
csv = "1.3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "io-util", "fs"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urc200-proto = { path = "../urc200-proto" }
urc200-serial = { path = "../urc200-serial" }
